# tablefi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
examples/: tablefi-example.rs
src/: lib.rs
src/table/: cell.rs  mod.rs  slice.rs  table.rs
