[package]
name = "tablefi"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Warner Zee <warner@zoynk.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wyzzarz/tablefi"
readme = "README.md"
description = "Simple table to store, manipulate and format tabular data."
keywords = ["tables", "tabular", "grid", "data-structure", "matrix"]
categories = ["finance", "mathematics", "data-structures", "value-formatting", "parser-implementations"]
include = [
    "/examples",
    "/src/**",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE-*",
    "/README.md",
]

[dependencies]
grid = "0.17.0"
rust_decimal = "1.37.1"
