[package]
name = "tablefi"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
authors = ["Warner Zee <warner@zoynk.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wyzzarz/tablefi"
readme = "README.md"
description = "Simple table to store, manipulate and format tabular data."
keywords = ["tables", "tabular", "grid", "arithmetic", "csv"]
categories = ["finance", "mathematics", "data-structures", "value-formatting", "parser-implementations"]
include = [
    "/examples",
    "/src/**",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE-*",
    "/README.md",
]

[dependencies]
derive_more = { version = "2.0.1", features = ["add", "add_assign", "from", "into", "mul", "mul_assign", "sum"] }
grid = "0.17.0"
regex = "1.11.1"
rust_decimal = "1.37.1"
serde = { version ="1.0.219", features = ["derive"] }
serde_json = "1.0.140"
